# KogSys-ML-Einfuehrung-in-Maschinelles-Lernen

./: README.md
.github/: copilot-instructions.md
Assignments/Assignment -2  ws - 2526/Assignment-2/KogSysMLP/: MLP.py  Perceptron.py  __init__.py  pyproject.toml
Assignments/Assignment-3 - ws - 2526/: requirements.txt  student_version_de.ipynb  student_version_en.ipynb
uebung-Matrialian/1 - 20.10.2025  - Grundlagen und Geschichte des Machine Learning/: task_1.py  task_1_names.py  task_2_solution.py
uebung-Matrialian/2 - 23.10.2025 - Grundlagen des Konzeptlernens und Entscheidungsbäume/: tree_demonstration_solution.ipynb
uebung-Matrialian/3 - 30.10.2025  - Ensembles, Evaluation, und Genetische Algorithmen/: ensembles-evaluation-solution.ipynb
uebung-Matrialian/4 -6.11.2025 -  Inductive Logic Programming (Pt. 1)/: foilite.ipynb  foilite_solution.ipynb  requirements.txt  sandwich.pl
uebung-Matrialian/5 -13.11.2025 - Lineare Trennebenen- Perceptron und Max Margins/: perceptron.ipynb  perceptron_solution.ipynb
uebung-Matrialian/6 - 20.11.2025  - Nicht-lineare Funktionen_Multilayer Perceptrons (MLPs) und Kernels (SVMs)/: mnist_mlp.ipynb  mnist_mlp_solution.ipynb
uebung-Matrialian/7 -  28.11.2025 - Instanzbasiertes Lernen/: k-nearest solution.ipynb  k-nearest.ipynb
uebung-Matrialian/8 - Gastvortrag von Erklärbarkeit zu Causal Inference mittels Machine Learning/: FromXAItoCausalnference.ipynb  XAI demo.ipynb
uebung-Matrialian/9.1 - Übung 1_ Network Architectures and Introduction to PyTorch/: network-architectures-solution.ipynb  network-architectures.ipynb
(+10 files in other folders)
